--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Objective-HTML/objective-cli#readme",
   "dependencies": {
+    "boxen": "^4.2.0",
+    "chalk": "^4.0.0",
     "chokidar": "^3.4.0",
-    "colors": "^1.4.0",
-    "node-emoji": "^1.10.0"
+    "cliui": "^6.0.0",
+    "figlet": "^1.4.0"
   }
 }
