--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "objective-cli",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "👩‍💻 Objective HTML CLI.",
   "main": "main.js",
   "bin": {
@@ -22,6 +22,7 @@
     "chalk": "^4.0.0",
     "chokidar": "^3.4.0",
     "cliui": "^6.0.0",
-    "figlet": "^1.4.0"
+    "figlet": "^1.4.0",
+    "glob": "^7.1.6"
   }
 }
