✨ New Objective HTML core added.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chokidar": "^3.4.0",
     "cliui": "^6.0.0",
     "figlet": "^1.4.0",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "js-beautify": "^1.11.0"
   }
 }
