✨ Executable compilation added.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cliui": "^6.0.0",
     "figlet": "^1.4.0",
     "glob": "^7.1.6",
-    "js-beautify": "^1.11.0"
+    "js-beautify": "^1.11.0",
+    "pkg": "^4.4.8"
   }
 }
